--- a/html/recipes.html
+++ b/html/recipes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes || Starter</title>
+    <title>Recipes</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <!-- normalize -->
@@ -19,7 +19,49 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-   <h1>Recipes Page</h1>
-    
+    <!-- nav -->
+    <nav class="navbar">
+      <div class="nav-center">
+        <!-- header -->
+        <div class="nav-header">
+          <a href="index.html" class="nav-logo">
+            <img src="./assets/logo.svg" alt="simple recipes">
+          </a>
+          <button class="nav-btn btn">
+            <i class="fas fa-align-justify"></i>
+          </button>
+        </div>
+        <!-- Links -->
+        <div class="nav-links">
+          <a target="_blank" href="../index.html" class="nav-link">Home</a>
+          <a target="_blank" href="../html/about.html" class="nav-link">About</a>
+          <a target="_blank" href="../html/tag.html" class="nav-link">Tags</a>
+          <a target="_blank" href="../html/recipes.html" class="nav-link">Recipes</a>
+
+          <!-- Contact -->
+          <div class="nav-link contact-link">
+            <a href="../html/contact.html" class="btn">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- end of nav -->
+
+    <!-- main -->
+<main class="page">
+
+</main>
+    <!-- end of main -->
+    <!-- footer -->
+    <footer class="page-footer">
+      <p>&copy; <span id="date">2021</span>
+      <span class="footer-logo">
+        MyRecipes
+      </span>
+      Built by <a href="https://github.com/sarfrajabbasi">aspring-Web-Developer</a>
+    </p>
+    </footer>
+    <!-- end of footer -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
