--- a/index.html
+++ b/index.html
@@ -32,18 +32,35 @@
         </div>
         <!-- Links -->
         <div class="nav-links">
-          <a href="./index.html" class="nav-link">Home</a>
-          <a href="./html/about.html" class="nav-link">About</a>
-          <a href="./html/tag.html" class="nav-link">Tags</a>
-          <a href="./html/recipes.html" class="nav-link">Recipes</a>
+          <a target="_blank" href="./index.html" class="nav-link">Home</a>
+          <a target="_blank" href="./html/about.html" class="nav-link">About</a>
+          <a target="_blank" href="./html/tag.html" class="nav-link">Tags</a>
+          <a target="_blank" href="./html/recipes.html" class="nav-link">Recipes</a>
 
           <!-- Contact -->
           <div class="nav-link contact-link">
-            <a href="./html/contact.html" class="btn">Contact</a>
+            <a href="../html/contact.html" class="btn">Contact</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- end of nav -->
+
+    <!-- main -->
+<main class="page">
+
+</main>
+    <!-- end of main -->
+    <!-- footer -->
+    <footer class="page-footer">
+      <p>&copy; <span id="date">2021</span>
+      <span class="footer-logo">
+        MyRecipes
+      </span>
+      Built by <a href="https://github.com/sarfrajabbasi">aspring-Web-Developer</a>
+    </p>
+    </footer>
+    <!-- end of footer -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
