--- a/html/about.html
+++ b/html/about.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
     <!-- normalize -->
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
     <!-- nav -->
@@ -33,10 +33,10 @@
         </div>
         <!-- Links -->
         <div class="nav-links">
-          <a target="_blank" href="./index.html" class="nav-link">Home</a>
-          <a target="_blank" href="./html/about.html" class="nav-link">About</a>
-          <a target="_blank" href="./html/tag.html" class="nav-link">Tags</a>
-          <a target="_blank" href="./html/recipes.html" class="nav-link">Recipes</a>
+          <a target="_blank" href="../index.html" class="nav-link">Home</a>
+          <a target="_blank" href="../html/about.html" class="nav-link">About</a>
+          <a target="_blank" href="../html/tag.html" class="nav-link">Tags</a>
+          <a target="_blank" href="../html/recipes.html" class="nav-link">Recipes</a>
 
           <!-- Contact -->
           <div class="nav-link contact-link">
@@ -62,6 +62,6 @@
     </p>
     </footer>
     <!-- end of footer -->
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
