--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 </main>
     <!-- end of main -->
+
+    
     <!-- footer -->
     <footer class="page-footer">
       <p>&copy; <span id="date">2021</span>
@@ -61,6 +63,6 @@
     </p>
     </footer>
     <!-- end of footer -->
-    <script src="./js/app.js"></script>
+    <script src="../recipes project/js/app.js"></script>
   </body>
 </html>
