--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <!-- Contact -->
           <div class="nav-link contact-link">
-            <a href="../html/contact.html" class="btn">Contact</a>
+            <a target="_blank" href="./html/contact.html" class="btn">Contact</a>
           </div>
         </div>
       </div>
@@ -48,7 +48,21 @@
 
     <!-- main -->
 <main class="page">
+  <!-- header -->
+  <header class="hero">
+    <div class="hero-container">
+      <div class="hero-text">
+        <h1>My Recipes</h1>
+        <h4>No Editing, only real cooking Techniques & Recipes</h4>
+      </div>
+    </div>
+  </header>
 
+  <!-- end header -->
+
+  <!-- recipes Container -->
+  div.tags-cons
+  <!-- end of recipes Container -->
 </main>
     <!-- end of main -->
 
