--- a/html/about.html
+++ b/html/about.html
@@ -25,7 +25,7 @@
         <!-- header -->
         <div class="nav-header">
           <a href="index.html" class="nav-logo">
-            <img src="./assets/logo.svg" alt="simple recipes">
+            <img src="../assets/logo.svg" alt="simple recipes">
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
