--- a/html/contact.html
+++ b/html/contact.html
@@ -24,7 +24,7 @@
       <div class="nav-center">
         <!-- header -->
         <div class="nav-header">
-          <a href="index.html" class="nav-logo">
+          <a target="_blank" href="../index.html" class="nav-logo">
             <img src="../assets/logo.svg" alt="simple recipes">
           </a>
           <button class="nav-btn btn">
