--- a/index.html
+++ b/index.html
@@ -60,13 +60,64 @@
 
   <!-- end header -->
 
-  <!-- recipes Container -->
-  div.tags-cons
-  <!-- end of recipes Container -->
+  <!-- recipes container -->
+  <section class="recipes-container">
+    <!-- tag container -->
+<div class="tags-container">
+  <h4>Recipes</h4>
+  <div class="tags-list">
+    <a href="./html/tag-template.html">Chicken-Dana(5)</a>
+    <a href="./html/tag-template.html">Tandoori Chicken(2)</a>
+    <a href="./html/tag-template.html">Chicken-Tikka(3)</a>
+    <a href="./html/tag-template.html">Chicken-Kabab Roll(4)</a>
+    <a href="./html/tag-template.html">Food</a>
+  </div>
+  </div>
+  <!-- end of tag container -->
+  
+
+    <!-- recipes list -->
+  
+    <div class="recipes-list">
+  <!-- single recipe -->
+  <a target="_blank" href="./html/single-recipe.html" class="recipe">
+    <img src="./assets/items-recipe/chicken-dana.png" alt="chicken-dana" class="img recipe-img">
+    <h5>Chicken-dana</h5>
+    <p>Prep : 15min | Cook : 5min</p>
+  </a>
+  <!-- end of single recipe -->
+  
+  
+  <!-- single recipe -->
+  <a target="_blank" href="./html/single-recipe.html" class="recipe">
+    <img src="./assets/items-recipe/tandoori-chicken.jpg" alt="tandoori-chicken" class="img recipe-img">
+    <h5>Tandoori-Chicken</h5>
+    <p>Prep : 15min | Cook : 5min</p>
+  </a>
+  <!-- end of single recipe -->
+  
+  <!-- single recipe -->
+  <a target="_blank" href="./html/single-recipe.html" class="recipe">
+    <img src="./assets/items-recipe/CHICKEN-TIKKA.webp" alt="chicken-tikka" class="img recipe-img">
+    <h5>Chicken-Tikka</h5>
+    <p>Prep : 15min | Cook : 5min</p>
+  </a>
+  <!-- end of single recipe -->
+  
+  <!-- single recipe -->
+  <a target="_blank" href="./html/single-recipe.html" class="recipe">
+    <img src="./assets/items-recipe/chicken-roll.jpeg" alt="chicken-roll" class="img recipe-img">
+    <h5>Chicken-Roll</h5>
+    <p>Prep : 15min | Cook : 5min</p>
+  </a>
+  <!-- end of single recipe -->
+    </div>
+    <!-- end of recipes list -->
+  </section>
+  <!-- end of recipes container -->
 </main>
     <!-- end of main -->
 
-    
     <!-- footer -->
     <footer class="page-footer">
       <p>&copy; <span id="date">2021</span>
