--- a/html/404.html
+++ b/html/404.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
     <!-- normalize -->
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -23,8 +23,8 @@
       <div class="nav-center">
         <!-- header -->
         <div class="nav-header">
-          <a href="index.html" class="nav-logo">
-            <img src="./assets/logo.svg" alt="simple recipes">
+          <a target="_blank" href="../index.html" class="nav-logo">
+            <img src="../assets/logo.svg" alt="simple recipes">
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
@@ -39,18 +39,24 @@
 
           <!-- Contact -->
           <div class="nav-link contact-link">
-            <a href="../html/contact.html" class="btn">Contact</a>
+            <a target="_blank" href="../html/contact.html" class="btn">Contact</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- end of nav -->
 
+
     <!-- main -->
-<main class="page">
-<h1>Error Page</h1>
+<main class="page error-page">
+  <section>
+    <h1>404</h1>
+    <h3>Page not Found</h3>
+  </section>
 </main>
     <!-- end of main -->
+
+
     <!-- footer -->
     <footer class="page-footer">
       <p>&copy; <span id="date">2021</span>
@@ -61,6 +67,6 @@
     </p>
     </footer>
     <!-- end of footer -->
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
