--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 <div class="tags-container">
   <h4>Recipes</h4>
   <div class="tags-list">
-    <a href="./html/tag-template.html">Chicken-Dana(5)</a>
-    <a href="./html/tag-template.html">Tandoori Chicken(2)</a>
-    <a href="./html/tag-template.html">Chicken-Tikka(3)</a>
-    <a href="./html/tag-template.html">Chicken-Kabab Roll(4)</a>
-    <a href="./html/tag-template.html">Food</a>
+    <a target="_blank" href="./html/tag-template.html">Chicken-Dana(5)</a>
+    <a target="_blank" href="./html/tag-template.html">Tandoori Chicken(2)</a>
+    <a target="_blank" href="./html/tag-template.html">Chicken-Tikka(3)</a>
+    <a target="_blank" href="./html/tag-template.html">Chicken-Kabab Roll(4)</a>
+    <a target="_blank" href="./html/tag-template.html">Food</a>
   </div>
   </div>
   <!-- end of tag container -->
@@ -114,6 +114,7 @@
     </div>
     <!-- end of recipes list -->
   </section>
+  
   <!-- end of recipes container -->
 </main>
     <!-- end of main -->
