--- a/html/recipes.html
+++ b/html/recipes.html
@@ -24,7 +24,7 @@
       <div class="nav-center">
         <!-- header -->
         <div class="nav-header">
-          <a href="index.html" class="nav-logo">
+          <a href="../index.html" class="nav-logo">
             <img src="../assets/logo.svg" alt="simple recipes">
           </a>
           <button class="nav-btn btn">
@@ -49,7 +49,61 @@
 
     <!-- main -->
 <main class="page">
+ <!-- recipes container -->
+ <section class="recipes-container">
+  <!-- tag container -->
+<div class="tags-container">
+<h4>Recipes</h4>
+<div class="tags-list">
+  <a target="_blank" href="../html/tag-template.html">Chicken-Dana(5)</a>
+  <a target="_blank" href="../html/tag-template.html">Tandoori Chicken(2)</a>
+  <a target="_blank" href="../html/tag-template.html">Chicken-Tikka(3)</a>
+  <a target="_blank" href="../html/tag-template.html">Chicken-Kabab Roll(4)</a>
+  <a target="_blank" href="../html/tag-template.html">Food</a>
+</div>
+</div>
+<!-- end of tag container -->
 
+
+  <!-- recipes list -->
+
+  <div class="recipes-list">
+<!-- single recipe -->
+<a target="_blank" href="../html/single-recipe.html" class="recipe">
+  <img src="../assets/items-recipe/chicken-dana.png" alt="chicken-dana" class="img recipe-img">
+  <h5>Chicken-dana</h5>
+  <p>Prep : 15min | Cook : 5min</p>
+</a>
+<!-- end of single recipe -->
+
+
+<!-- single recipe -->
+<a target="_blank" href="../html/single-recipe.html" class="recipe">
+  <img src="../assets/items-recipe/tandoori-chicken.jpg" alt="tandoori-chicken" class="img recipe-img">
+  <h5>Tandoori-Chicken</h5>
+  <p>Prep : 15min | Cook : 5min</p>
+</a>
+<!-- end of single recipe -->
+
+<!-- single recipe -->
+<a target="_blank" href="../html/single-recipe.html" class="recipe">
+  <img src="../assets/items-recipe/CHICKEN-TIKKA.webp" alt="chicken-tikka" class="img recipe-img">
+  <h5>Chicken-Tikka</h5>
+  <p>Prep : 15min | Cook : 5min</p>
+</a>
+<!-- end of single recipe -->
+
+<!-- single recipe -->
+<a target="_blank" href="../html/single-recipe.html" class="recipe">
+  <img src="../assets/items-recipe/chicken-roll.jpeg" alt="chicken-roll" class="img recipe-img">
+  <h5>Chicken-Roll</h5>
+  <p>Prep : 15min | Cook : 5min</p>
+</a>
+<!-- end of single recipe -->
+  </div>
+  <!-- end of recipes list -->
+</section>
+<!-- end of recipes container -->
 </main>
     <!-- end of main -->
     <!-- footer -->
