--- a/html/tag.html
+++ b/html/tag.html
@@ -49,7 +49,13 @@
 
     <!-- main -->
 <main class="page">
-
+<section class="tags-wrapper">
+  <!-- single tag -->
+  <a href="./tag-template.html" class="tag">
+    <h5>Chicken Dana</h5>
+  </a>
+  <!-- end of single tag -->
+</section>
 </main>
     <!-- end of main -->
     <!-- footer -->
