--- a/html/tag.html
+++ b/html/tag.html
@@ -52,7 +52,37 @@
 <section class="tags-wrapper">
   <!-- single tag -->
   <a href="./tag-template.html" class="tag">
-    <h5>Chicken Dana</h5>
+    <h5>Food</h5>
+    <p>1 recipe</p>
+  </a>
+  <!-- end of single tag -->
+  
+  
+  <!-- single tag -->
+  <a href="./tag-template.html" class="tag">
+    <h5>Non-Veg</h5>
+    <p>6 recipe</p>
+  </a>
+  <!-- end of single tag -->
+  
+  <!-- single tag -->
+  <a href="./tag-template.html" class="tag">
+    <h5>Breakfast</h5>
+    <p>3 recipe</p>
+  </a>
+  <!-- end of single tag -->
+  
+  <!-- single tag -->
+  <a href="./tag-template.html" class="tag">
+    <h5>Gravy</h5>
+    <p>4 recipe</p>
+  </a>
+  <!-- end of single tag -->
+  
+  <!-- single tag -->
+  <a href="./tag-template.html" class="tag">
+    <h5>Dinner</h5>
+    <p>8 recipe</p>
   </a>
   <!-- end of single tag -->
 </section>
