--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
     </p>
     </footer>
     <!-- end of footer -->
-    <script src="../recipes project/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
